versioned_docs/version-1.21.x/wiki/extra-disks.mdx
---
description: Extra Disks adds bigger disks to Refined Storage 1.14+
---

# Extra Disks

import ProjectHeader from '@site/src/components/ProjectHeader';

<ProjectHeader slug="extra-disks" mcVersion="1.21" />

The contents of the mod can be divided into three main
categories: [Crafting Ingredients](#crafting-ingredients), [Block Storage](#block-storage),
and [Disk Storage](#disk-storage).

---

:::info
As of 29.12.2024, Refined Storage 2 (which is required for 1.21+) is only available on its
[GitHub Repo](https://github.com/refinedmods/refinedstorage2/releases).

You want to download the latest NeoForge release to use with **Extra Disks**.
:::

## Disk Storage
The primary storage solution, and the best known, is the disk. It functions similarly to Refined Storage but with larger
storage capacities.

## Block Storage
The secondary storage solution. It can be used like a regular block and doesn't require a drive. It is similar to
Refined Storage but with larger storage capacities. As in Refined Storage, you can adjust the power consumption in the
mod's server configuration within the world directory.

## Crafting Ingredients
There are a few additional crafting ingredients because, with great power, comes great responsibility.

## Storage Sizes

<div className="two-columns-base">
    <div className="two-columns-left">

    ### Item Storage

    |   Tier   | Storable Items |
    |:--------:|:--------------:|
    |   256k   |    256,000     |
    |  1024k   |   1,024,000    |
    |  4096k   |   4,096,000    |
    |  16384k  |  16,384,000    |
    |  65536k  |  65,536,000    |
    |   262m   | 262,144,000    |
    |  1048m   |1,048,576,000   |
    | Infinite |   Unlimited    |

    </div>
    <div className="two-columns-right">

    ### Fluid Storage

    |   Tier   | Storable Fluid (in mB) |
    |:--------:|:----------------------:|
    |  16384k  |    16,384,000          |
    |  65536k  |    65,536,000          |
    |   262kB  |   262,144,000          |
    |  1048kB  | 1,048,576,000          |
    | Infinite |    Unlimited           |
  </div>
</div>

## Advancements
You will receive an advancement for crafting the highest-capacity item or fluid storage disk/block.
